--- a/RICS_Qt/mainwindow.ui
+++ b/RICS_Qt/mainwindow.ui
@@ -24,7 +24,7 @@
        <string notr="true">background: rgba(51, 64, 88, 0%);</string>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="startPage">
        <property name="styleSheet">
@@ -77,7 +77,7 @@ border: solid;
         </property>
         <property name="icon">
          <iconset resource="resources.qrc">
-          <normaloff>:/images/settings-help.png</normaloff>:/images/settings-help.png</iconset>
+          <normaloff>:/images/settings-w-reset.png</normaloff>:/images/settings-w-reset.png</iconset>
         </property>
         <property name="iconSize">
          <size>
@@ -1316,7 +1316,7 @@ color: white;</string>
          </rect>
         </property>
         <property name="text">
-         <string> </string>
+         <string/>
         </property>
        </widget>
       </widget>
